maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: not found: value getWorldWitdh
 for (i <- 0 to getWorldWitdh() - 1){
                ^