maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
 var (x, y):(Int, Int) = (0, 0)
  
 for (i <- 0 to getWorldWitdh() - 1){
   for (j <- 0 to getWorldHeight() - 1){
     if (hasBaggle(i, j)){
      	x = i
       	y = j
     }
   }
 }
  
  System.out.println(x, y)
}